# redpen

./: .env.signing.example  .gitignore  .mcp.json  AGENTS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  cliff.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  prek.toml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.ai/: Taskfile.dist.yml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rust.yml  ts.yml
channels/redpen-channel/: redpen-channel.ts
crates/redpen-cli/: Cargo.toml
crates/redpen-cli/skills/resolve-redpen-reviews/: SKILL.md
crates/redpen-cli/skills/resolve-reviews/: SKILL.md
crates/redpen-cli/src/: main.rs  review.rs  server_client.rs
crates/redpen-core/: Cargo.toml
crates/redpen-core/src/: anchor.rs  annotation.rs  export.rs  hash.rs  lib.rs  session.rs  sidecar.rs
crates/redpen-core/tests/fixtures/: swift-sidecar.json
crates/redpen-gh-fake/: Cargo.toml
crates/redpen-gh-fake/examples/: seed_review.rs  serve_seeded.rs
crates/redpen-gh-fake/src/: backend.rs  graphql.rs  lib.rs  meta.rs  rest.rs  shapes.rs  test_backend.rs
crates/redpen-gh-fake/tests/: external_clients.rs  rust_native.rs
crates/redpen-gh-fake/tests/clients/: package-lock.json  package.json  test_gh_cli.sh  test_node.js  test_python.py
crates/redpen-gh-fake/tests/common/: mod.rs
crates/redpen-runtime/: Cargo.toml
crates/redpen-runtime/src/: annotations.rs  error.rs  event_bus.rs  lib.rs
crates/redpen-server/: Cargo.toml
crates/redpen-server/src/: lib.rs
docs/: macos-signing.md
docs/plans/: add-root-button.md  add-root-button.md.redpen.json  atuin-desktop-best-practices.md
docs/superpowers/plans/: 2026-03-20-red-pen.md  2026-03-22-cicd-release.md  2026-03-24-diff-view.md  2026-03-24-notification-system.md  2026-03-25-event-service-boundary.md  2026-03-28-review-page.md  2026-03-29-01-theme-color-system.md  2026-03-29-02-header-consolidation.md  2026-03-30-03-collapsed-bubbles-navigation.md  2026-03-30-05-review-page-overhaul.md  2026-03-30-pr-description-annotations.md
docs/superpowers/specs/: 2026-03-22-cicd-release-design.md  2026-03-22-cmd-k-command-palette-design.md  2026-03-22-ui-cleanup-design.md  2026-03-24-diff-view-design.md  2026-03-24-event-service-boundary-design.md  2026-03-24-notification-system-design.md  2026-03-28-review-page-design.md  2026-03-29-diff-cache-design.md  2026-03-29-pre-push-review-gate-design.md  2026-03-29-ui-overhaul-design.md  2026-03-30-settings-redesign-design.md  2026-04-01-checks-view-redesign.md  2026-04-02-workspace-launch-redesign-design.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/hooks/scripts/: check-git-push.sh  check-plan-write.sh
plugin/skills/review/: SKILL.md
plugin/skills/review-code/: SKILL.md
plugin/skills/review-plan/: SKILL.md
script/: check-tauri-versions  check-up-to-date
scripts/: ci-setup-macos-keychain.sh  run-macos-signing.sh  sync-gh-secrets.sh  update-homebrew-tap.sh
src/: App.svelte  App.test.ts  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  cli_install.rs  event_bus.rs  gh_fake_backend.rs  lib.rs  main.rs  notification.rs  settings.rs  state.rs  storage.rs  workspace_index.rs
src-tauri/src/commands/: annotations.rs  diff.rs  error.rs  export.rs  files.rs  git.rs  github_review.rs  mod.rs  review_history.rs
src/components/: AnnotationBubble.svelte  AnnotationCard.svelte  AnnotationPopover.svelte  AnnotationSidebar.svelte  BubbleKindFilter.svelte  ChecksView.svelte  CommandPalette.svelte  CommandPalette.test.ts  DiffEditor.svelte  DiffModeToggle.svelte  DiffRefPicker.svelte  Editor.svelte  EditorPane.svelte  EditorPane.test.ts  FileTree.svelte  FileTreeItem.svelte  FilterBar.svelte  GitHubInbox.svelte  MarkdownPreview.svelte  PrBodyAnnotatable.svelte  PullRequestView.svelte  ResizeHandle.svelte  ReviewCard.svelte  ReviewCodeSnippet.svelte  ReviewPage.svelte  ReviewSession.svelte  ReviewWorkspaceHeader.svelte  ReviewWorkspaceHeader.test.ts  SettingsDialog.svelte  SettingsDialog.test.ts  Toolbar.svelte
src/components/checks/: ChecksErrorContext.svelte  ChecksJobList.svelte  ChecksMiniDiff.svelte  ChecksTerminal.svelte
src/components/editor-pane/: CodeInputController.svelte  WorkspaceContentRouter.svelte  WorkspaceToolbar.svelte
src/components/review-header/: ReviewActionsGroup.svelte  ReviewContextBanner.svelte  ReviewSubmitControl.svelte
src/components/ui/: Button.svelte  IconButton.svelte  Kbd.svelte  TagInput.svelte  ToggleSwitch.svelte
src/lib/: commands.ts  review.ts  shortcuts.ts  tauri.ts  types.ts
src/lib/bindings/: Anchor.ts  Annotation.ts  AnnotationKind.ts  AppSettings.ts  BranchInfo.ts  ChangeKind.ts  CheckRun.ts  CheckRunsResult.ts  Choice.ts  CleanupReviewSessionsResult.ts  CommitInfo.ts  CreateAnnotationRequest.ts  DiffChange.ts  DiffHunk.ts  DiffResult.ts  FileAnnotations.ts  FileEntry.ts  FileSnippet.ts  GitFileStatus.ts  GitHubAnnotationMetadata.ts  GitHubInboxItem.ts  GitHubPrSession.ts  GitHubReviewEvent.ts  GitHubReviewQueueItem.ts  GitHubSyncState.ts  GitSnapshot.ts  InboxCategory.ts  NotificationSettings.ts  Range.ts  RefList.ts  ResumeReviewSessionResult.ts  ReviewHistory.ts  ReviewHistoryItem.ts  SelectionMode.ts  SessionFile.ts  SessionFileEntry.ts  SidecarFile.ts  SubmitGitHubReviewResult.ts  TrackedRepo.ts  UpdateSettingsRequest.ts  (+5 more)
src/lib/codemirror/: annotations.ts  bubbles.ts  diff.ts  languages.ts  search.test.ts  search.ts  setup.ts  theme.ts  vimish.ts
src/lib/controllers/: appShell.svelte.ts  appShell.test.ts
src/lib/markdown/: blocks.ts  markdown.css  render.test.ts  render.ts
src/lib/review/: prBodySummary.ts
src/lib/stores/: annotations.svelte.ts  diff.svelte.ts  diff.test.ts  editor.svelte.ts  githubReview.svelte.ts  review.svelte.ts  (+4 more)
src/test/: setup.ts
(+2 files in other folders)
