[package]
name = "red-pen-tauri"
version = "0.1.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redpen-core = { path = "../crates/redpen-core" }
git2 = "0.20"
whoami = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "8"
walkdir = "2"
similar = "2"
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }
redpen-server = { path = "../crates/redpen-server" }

[dev-dependencies]
tempfile = "3"
