[package]
name = "red-pen-tauri"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redpen-core = { path = "../crates/redpen-core" }
redpen-runtime = { path = "../crates/redpen-runtime" }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
whoami = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "8"
walkdir = "2"
similar = "2"
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }
redpen-server = { path = "../crates/redpen-server" }
redpen-gh-fake = { path = "../crates/redpen-gh-fake" }
async-trait = "0.1"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
