[package]
name = "redpen-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "redpen"
path = "src/main.rs"

[dependencies]
redpen-core = { path = "../redpen-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
whoami = "1"
urlencoding = "2"
git2 = "0.20"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
