[package]
name = "redpen-cli"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "redpen"
path = "src/main.rs"

[dependencies]
redpen-core = { path = "../redpen-core" }
redpen-server = { path = "../redpen-server" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "2"
urlencoding = "2"
git2 = "0.20"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
