[package]
name = "redpen-core"
version = "0.1.6"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
strsim = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }

[dev-dependencies]
tempfile = "3"
