[package]
name = "redpen-gh-fake"
version = "0.1.0"
edition = "2021"
description = "Localhost GitHub-API-compatible HTTP server backed by a pluggable trait. Lets agent tools (e.g. agent-reviews) target Redpen sessions instead of api.github.com."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["sync", "net", "rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "process", "fs", "io-util"] }
serde_json = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
