[package]
name = "redpen-server"
version = "0.1.0"
edition = "2021"

[dependencies]
redpen-core = { path = "../redpen-core" }
axum = "0.8"
tokio = { version = "1", features = ["sync", "net", "rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread", "macros", "time"] }
